--- a/index.html
+++ b/index.html
@@ -12,6 +12,47 @@
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body>
-      <h1>Browser Template</h1>
+      <h1>Lift Tracker</h1>
+      <header class='main-header'>
+        <button id="getLiftsButton">Get Lifts</button>
+        <button id="clearLiftsButton">Clear Lifts</button>
+      </header>
+      <form id="addLift">
+        <input type="text" placeholder="enter lift type" name="lifts[type]">
+        <input type="text" placeholder="enter the weight" name="lifts[weight]">
+        <input type="text" placeholder="enter the reps" name="lifts[reps]">
+        <input type="submit" value="Add lift">
+      </form>
+      <form id="updateLift">
+        <input type="number" placeholder="enter the lift id" name="lifts[id]">
+        <input type="text" placeholder="enter lift type" name="lifts[type]">
+        <input type="text" placeholder="enter the weight" name="lifts[weight]">
+        <input type="text" placeholder="enter the reps" name="lifts[reps]">
+        <input type="submit" value="Update lift">
+      </form>
+      <p id="sign-in-message"></p>
+      <form id='sign-up'>
+        <h2 class='sign-up-head'>Sign Up!</h2>
+        <input type="email" placeholder="john@example.com" name="credentials[email]">
+        <input type="password" placeholder="password" name="credentials[password]">
+        <input type="password" placeholder="password confirmation" name="credentials[password_confirmation]">
+        <input type="submit" value="Sign up">
+      </form>
+      <form id='sign-in'>
+        <h2 class='sign-in-head'>Sign In!</h2>
+        <input type="email" placeholder="john@example.com" name="credentials[email]">
+        <input type="password" placeholder="password" name="credentials[password]">
+        <input type="submit" value="Sign in">
+      </form>
+        <form class='change-password'>
+        <h2 class='change-password-head'>Change Password</h2>
+        <input name="passwords[old]" type="password" placeholder="Old password">
+        <input name="passwords[new]" type="password" placeholder="New password">
+        <input type="submit" value="Change Password">
+      </form>
+        <form id='sign-out'>
+        <h2 class='sign-out-head'>Sign Out</h2>
+        <input type="submit" value="Sign out">
+      </form>
     </body>
 </html>
