--- a/index.html
+++ b/index.html
@@ -54,5 +54,6 @@
         <h2 class='sign-out-head'>Sign Out</h2>
         <input type="submit" value="Sign out">
       </form>
+      <div class='content'></div>
     </body>
 </html>
