--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
         <input type="email" placeholder="john@example.com" name="credentials[email]">
         <input type="password" placeholder="password" name="credentials[password]">
         <input type="password" placeholder="password confirmation" name="credentials[password_confirmation]">
+        <input type="text" placeholder="First name" name="credentials[first_name]">
+        <input type="text" placeholder="Last name" name="credentials[last_name]">
         <input type="submit" value="Sign up">
       </form>
       <form id='sign-in'>
