--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>Example</title>
+      <title>Lift Tracker</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
       <!-- Do not add `link` tags-->
@@ -49,7 +49,7 @@
           <option value="Bench">Bench</option>
           <option value="Leg Press">Leg Press</option>
         </select>
-        <input type="number" placeholder="enter the weight" name="lift[weight]">
+        <input type="number" placeholder="enter the weight(lbs)" name="lift[weight]">
         <input type="number" placeholder="enter the reps" name="lift[reps]">
         <input type="submit" value="Add lift" class="btn btn-primary">
       </form>
@@ -88,7 +88,7 @@
           <option value="Bench">Bench</option>
           <option value="Leg Press">Leg Press</option>
         </select>
-        <input type="number" placeholder="enter the weight" name="lift[weight]">
+        <input type="number" placeholder="enter the weight(lbs)" name="lift[weight]">
         <input type="number" placeholder="enter the reps" name="lift[reps]">
         <input type="submit" value="Update lift" class="btn-warning">
       </form>
@@ -99,7 +99,7 @@
         <legend>Change Password</legend>
         <input name="passwords[old]" type="password" placeholder="Old password">
         <input name="passwords[new]" type="password" placeholder="New password">
-        <input type="submit" value="Change Password" class="btn-danger">
+        <input type="submit" value="Change Password" class="btn-danger" data-toggle="modal" data-target="#myModal">
       </form>
       <form id='sign-out'>
         <legend>Sign Out</legend>
@@ -107,6 +107,26 @@
       </form>
     </div>
   </div>
+  <!-- Modal -->
+<div id="myModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Modal Header</h4>
+      </div>
+      <div class="modal-body">
+        <p>Some text in the modal.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+
+  </div>
+</div>
       <div class='content'></div>
     </body>
 </html>
