--- a/index.html
+++ b/index.html
@@ -12,17 +12,47 @@
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body>
+      <!-- Modal -->
+<div class="modal fade" id="update-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Update Item</h5>
+        <button id='clearit' type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p id='message2'></p>
+        <form id='updateLift' class="col-12">
+          <fieldset>
+            <div class="form-group">
+              <select name="lift[exercise]" class="dropwdown-menu">
+                <option value="Deadlift">Deadlift</option>
+                <option value="Squat">Squat</option>
+                <option value="Bench">Bench</option>
+                <option value="Leg Press">Leg Press</option>
+              </select>
+              <input type="number" placeholder="enter the weight(lbs)" name="lift[weight]">
+              <input type="number" placeholder="enter the reps" name="lift[reps]">
+              <br>
+              <input type='submit' class="btn btn-primary" value='Update'>
+            </div>
+          </fieldset>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
       <h1>Lift Tracker</h1>
       <header class='main-header'>
         <h6>Show Your Lifts</h6>
         <button id="getLiftsButton" class="btn-primary">Get Lifts</button>
         <button id="clearLiftsButton" class="btn-default">Clear Lifts</button>
       </header>
-      <form id='getLift'>
-        <legend>Get a Single Lift</legend>
-        <input id="single-lift-value" type="number" placeholder="id of lift you want">
-      <button id="get-single-lift" class="btn-primary">Get Lift</button>
-      </form>
       <p id="sign-in-message"></p>
       <form id='sign-up'>
         <h2 class='sign-up-head'>Sign Up!</h2>
@@ -39,8 +69,23 @@
         <input type="password" placeholder="password" name="credentials[password]">
         <input type="submit" value="Sign in" class="btn-primary">
       </form>
+
   <div class="row">
-    <div class="col-3 main-col">
+    <div class="col-12 main-col">
+      <form class='change-password'>
+        <legend>Change Password</legend>
+        <input name="passwords[old]" type="password" placeholder="Old password">
+        <input name="passwords[new]" type="password" placeholder="New password">
+        <input type="submit" value="Change Password" class="btn-danger" data-toggle="modal" data-target="#myModal">
+      </form>
+      <form id='sign-out'>
+        <legend>Sign Out</legend>
+        <input type="submit" value="Sign out" class="btn-warning">
+      </form>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12 main-col">
       <form id="addLift">
         <legend>Add a Lift</legend>
         <select name="lift[exercise]">
@@ -76,35 +121,6 @@
           <span id="averageRepsDisplay"></span>
         </div>
       </div>
-    </div>
-    <div class="col-1"></div>
-    <div class="col-3 main-col">
-      <form id="updateLift">
-        <legend>Update a Lift</legend>
-        <input type="number" placeholder="enter the lift id" name="lift[id]">
-        <select name="lift[exercise]" class="dropwdown-menu">
-          <option value="Deadlift">Deadlift</option>
-          <option value="Squat">Squat</option>
-          <option value="Bench">Bench</option>
-          <option value="Leg Press">Leg Press</option>
-        </select>
-        <input type="number" placeholder="enter the weight(lbs)" name="lift[weight]">
-        <input type="number" placeholder="enter the reps" name="lift[reps]">
-        <input type="submit" value="Update lift" class="btn-warning">
-      </form>
-    </div>
-    <div class="col-1"></div>
-    <div class="col-3 main-col">
-      <form class='change-password'>
-        <legend>Change Password</legend>
-        <input name="passwords[old]" type="password" placeholder="Old password">
-        <input name="passwords[new]" type="password" placeholder="New password">
-        <input type="submit" value="Change Password" class="btn-danger" data-toggle="modal" data-target="#myModal">
-      </form>
-      <form id='sign-out'>
-        <legend>Sign Out</legend>
-        <input type="submit" value="Sign out" class="btn-warning">
-      </form>
     </div>
   </div>
   <!-- Modal -->
